--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+MVC_AppleLaLa/MVC_AppleLaLa/Web.config
+MVC_AppleLaLa/MVC_AppleLaLa_Admin/Web.config
