--- a/MVC_AppleLaLa/MVC_AppleLaLa_Admin/Web.config
+++ b/MVC_AppleLaLa/MVC_AppleLaLa_Admin/Web.config
@@ -8,6 +8,15 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Server=tcp:applelala.database.windows.net,1433;Initial Catalog=LaLa_DB;Persist Security Info=False;User ID=sysdba;Password=!Qaz2wsx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      providerName="System.Data.SqlClient" />
+    <add name="AppleLaLaModel" connectionString="data source=tcp:applelala.database.windows.net,1433;initial catalog=LaLa_DB;persist security info=False;user id=sysdba;password=!Qaz2wsx;multipleactiveresultsets=False;connect timeout=30;encrypt=True;trustservercertificate=False;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="DSContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=DSContext-20200617154253; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DSContext-20200617154253.mdf"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
